# price_scraper

./: .env  .env.example  .gitignore  MANIFEST.in  README.md  config.json  pyproject.toml
.github/workflows/: dispatch-self-hosted.yml  schedule-github.yml  schedule.yml
data/: overview.csv  overview.json  product.csv  products
price_scraper/: __init__.py  __main__.py  config.json
price_scraper/config/: __init__.py  config.py
price_scraper/models/: Product.py  RealEstate.py  __init__.py  base.py
price_scraper/models/db/: __init__.py
price_scraper/repository/: __init__.py  base.py  inmemory.py  io.py  sqlite.py
price_scraper/services/: instar.py  links.py  mediaworld.py  mikronis.py  mobileshop.py  mololongo.py  nabava.py  real.py  remax.py  unieuro.py
price_scraper/services/overview/: dogma.py
price_scraper/utils/: io.py  requests.py  utils.py
reports/: make.py
